# proto-wasm

./: Cargo.toml  README.md  build.rs
src/: lib.rs
src/proto/: message.proto
tests/: integration.rs
