[package]
name = "proto_wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
protobuf         = "3.4.0"

[build-dependencies]
protobuf-codegen = "3.4.0"

[dev-dependencies]
once_cell        = "1.19.0"
tokio            = { version = "1.37.0", features = ["full"] }
wasmer           = "4.3.2"
wasmer-wasix     = "0.22.0"

[lib]
crate-type = ["cdylib", "rlib"]
